--- a/.github/workflows/publish-docker-image.yml
+++ b/.github/workflows/publish-docker-image.yml
@@ -25,10 +25,18 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Build and push Docker image
+      - name: Build and push Docker image for console app
         uses: docker/build-push-action@v2
         with:
           context: .
           file: ./Dockerfile
           push: true
           tags: ghcr.io/${{ github.repository }}:latest
+
+      - name: Build and push Docker image for flask app
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          file: ./Dockerfile-flask
+          push: true
+          tags: ghcr.io/${{ github.repository }}-flask:latest
